networking/ingress_rewrite_target.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: demo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 8080
            path: /
            pathType: Exact
    - host: test.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 8080
            path: /web(/|$)(.*)
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
